# roguelike

./: .gitignore  CMakeLists.txt  README.md  loggerConfig.conf
.github/workflows/: cmake.yml
libs/easylogging/: easylogging++.cpp
resources/core/: textures.xml
resources/core/breeds/: critters.xml
resources/core/heroes/: knight.xml  priest.xml  thief.xml
resources/core/items/: arrow.xml  gold.xml  identify_scroll.xml  leather_tunic.xml  magic_mirror.xml  sword_steel.xml  torch.xml  wooden_bow.xml
src/: action.h  actionResult.h  actor.cpp  attackAction.cpp  attackCapability.h  breed.cpp  breed.h  closeDoorAction.cpp  cmake_config.h.in  defenseCapability.h  descendAction.cpp  dungeonDecorator.h  dungeonGenerationStyle.h  dungeonLayout.h  engine.cpp  engine.h  game.cpp  game.h  gameLevel.h  hero.cpp  hero.h  heroClass.cpp  heroClass.h  identifiedSurface.h  item.cpp  item.h  itemEntity.h  itemStack.h  keyboard.cpp  layoutGenerator.cpp  main.cpp  map.cpp  monster.cpp  monster.h  openDoorAction.cpp  pch.h  pickupItemAction.cpp  pickupItemAction.h  registry.h  renderHelper.cpp  (+9 more)
src/actions/: actionResult.cpp  attackAction.h  closeDoorAction.h  descendAction.h  openDoorAction.h  pickupItemAction.h  walkAction.cpp  walkAction.h
src/core/: direction.h  engine.cpp  engine.h  game.h  gameLevel.h  inventory.cpp  inventory.h  keyboard.cpp  keyboard.h
src/gfx/: renderHelper.cpp  renderHelper.h  sdlHandler.cpp  sdlHandler.h
src/math/: math.h  rect2.h  vec2.cpp  vec2.h
src/resources/: registry.cpp  registry.h  resourceManager.cpp  resourceManager.h  subTexture.cpp  textureAtlas.cpp  textureAtlas.h
src/world/: actor.h  breed.cpp  hero.cpp  hero.h  item.h  itemEntity.cpp  itemEntity.h  itemStack.h  map.cpp  map.h  monster.cpp  monster.h
